--- a/action_castle.ipynb
+++ b/action_castle.ipynb
@@ -681,8 +681,8 @@
         "\n",
         "def perform_multiple_actions(game, *args):\n",
         "  for arg in args[0]:\n",
-        "    print(len(arg))\n",
-        "    print(arg)\n",
+        "    # print(len(arg))\n",
+        "    # print(arg)\n",
         "    (function, fargs) = arg\n",
         "    if function(game, fargs):\n",
         "      return True\n",
@@ -853,11 +853,7 @@
       "metadata": {
         "id": "Ree6Cn5z6gBx",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "c8b3860f-ae6f-4c8c-d56e-e9ffeb092123"
+        "colab": {}
       },
       "source": [
         "def game_loop():\n",
@@ -875,148 +871,8 @@
         "game_loop()\n",
         "print('THE GAME HAS ENDED.')"
       ],
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "You are standing in a small cottage.\n",
-            "Exits: Out\n",
-            "You see: \n",
-            "a fishing pole\n",
-            ">take pole, out, pick rose, s, catch fish with pole, n, n, up, take branch, down, e, give fish to troll, e,  hit guard with branch, get key, e, take candle, w, down, light lamp, down, light candle, read runes, take crown, up, up, up, unlock door, up, give rose to princess, look, propose to the princess, wear crown, down, down, e, e\n",
-            "You take the pole.\n",
-            "You are standing on a lush garden path. There is a cottage here.\n",
-            "Exits: In, North, South\n",
-            "You see: \n",
-            "a rosebush\n",
-            "\t pick rose\n",
-            "You pick the lone rose from the rosebush.\n",
-            "You are at the edge of a small fishing pond.\n",
-            "Exits: North\n",
-            "You see: \n",
-            "a small fishing pond\n",
-            "\t catch fish\n",
-            "\t catch fish with pole\n",
-            "You dip your hook into the pond and catch a fish.\n",
-            "You are standing on a lush garden path. There is a cottage here.\n",
-            "Exits: In, North, South\n",
-            "You see: \n",
-            "a rosebush\n",
-            "\t pick rose\n",
-            "You are walking along a winding path. There is a tall tree here.\n",
-            "Exits: South, Up, East\n",
-            "You are the top of the tall tree. There is a stout, dead branch here.\n",
-            "Exits: Down\n",
-            "You see: \n",
-            "a branch\n",
-            "You take the branch.\n",
-            "You are walking along a winding path. There is a tall tree here.\n",
-            "Exits: South, Up, East\n",
-            "You are standing on one side of a drawbridge leading to ACTION CASTLE.\n",
-            "Exits: West, East\n",
-            "You see: \n",
-            "a green, hungary troll\n",
-            "\t attack troll\n",
-            "\t give fish to troll\n",
-            "The troll has eaten well and left.\n",
-            "You are in the courtyard of ACTION CASTLE.\n",
-            "Exits: West, East, Up, Down\n",
-            "You see: \n",
-            "a guard carrying a sword and a key\n",
-            "\t hit guard with branch\n",
-            "2\n",
-            "(<function destroy_item at 0x7f7c6d3d6e18>, (<__main__.Item object at 0x7f7c6d3b4f98>, 'You swing your branch against the guard. It shatters to pieces.'))\n",
-            "You swing your branch against the guard. It shatters to pieces.\n",
-            "2\n",
-            "(<function destroy_item at 0x7f7c6d3d6e18>, (<__main__.Item object at 0x7f7c6d3b45f8>, 'The guard slumps over, unconscious.'))\n",
-            "The guard slumps over, unconscious.\n",
-            "2\n",
-            "(<function create_item at 0x7f7c6d3d6d90>, (<__main__.Item object at 0x7f7c6d3b4b70>, \"The guard's unconscious body lies on the ground.\"))\n",
-            "The guard's unconscious body lies on the ground.\n",
-            "2\n",
-            "(<function create_item at 0x7f7c6d3d6d90>, (<__main__.Item object at 0x7f7c6d3b4b00>, 'His key falls from his hand.'))\n",
-            "His key falls from his hand.\n",
-            "You take the key.\n",
-            "You stand inside the Great Feasting Hall. There is a strange candle here.\n",
-            "Exits: West, East\n",
-            "You see: \n",
-            "a candle\n",
-            "\t read runes\n",
-            "You take the candle.\n",
-            "You are in the courtyard of ACTION CASTLE.\n",
-            "Exits: West, East, Up, Down\n",
-            "You see: \n",
-            "The unconscious guard is slumpped against the wall\n",
-            "You are on the stairs to the dungeon. It is too dark to see!\n",
-            "Exits: Up, Down\n",
-            "2\n",
-            "(<function destroy_item at 0x7f7c6d3d6e18>, (<__main__.Item object at 0x7f7c6d3b40f0>, 'You lit your lamp.'))\n",
-            "You lit your lamp.\n",
-            "2\n",
-            "(<function create_item at 0x7f7c6d3d6d90>, (<__main__.Item object at 0x7f7c6d3b4ba8>, 'You now have a lit lamp.'))\n",
-            "You now have a lit lamp.\n",
-            "You don't have the lit_lamp\n",
-            "It is too dark to see.\n",
-            "I'm not sure what you want to do.\n",
-            "You may only wear the crown after marrying the princess.\n",
-            "You can't find it.\n",
-            "You are in the courtyard of ACTION CASTLE.\n",
-            "Exits: West, East, Up, Down\n",
-            "You see: \n",
-            "The unconscious guard is slumpped against the wall\n",
-            "You are on the stairs to the tower.\n",
-            "Exits: Down, Up\n",
-            "You see: \n",
-            "a locked door\n",
-            "\t unlock door\n",
-            "The door is in this location\n",
-            "The door is locked.\n",
-            "The door is unlocked.\n",
-            "You are inside a tower. The princess is here.\n",
-            "Exits: Down\n",
-            "You see: \n",
-            "a fat princess\n",
-            "\t kiss princess\n",
-            "\t give rose to princess\n",
-            "\t propose to the princess\n",
-            "\t wear crown\n",
-            "You have gained the princess' favor. She is willing to talk with you.\n",
-            "You are inside a tower. The princess is here.\n",
-            "Exits: Down\n",
-            "You see: \n",
-            "a fat princess\n",
-            "\t kiss princess\n",
-            "\t give rose to princess\n",
-            "\t propose to the princess\n",
-            "\t wear crown\n",
-            "The princess sees her father's crown and accepts your proposal. You may now wear the crown.\n",
-            "2\n",
-            "(<function destroy_item at 0x7f7c6d3d6e18>, (<__main__.Item object at 0x7f7c6d3b4048>, 'You are wearing the crown.'))\n",
-            "\n",
-            "2\n",
-            "(<function add_item_to_inventory at 0x7f7c6d3d6f28>, (<__main__.Item object at 0x7f7c6d3b4da0>, 'You are now qualified to become the ruler of the kingdom.', ''))\n",
-            "You are now qualified to become the ruler of the kingdom.\n",
-            "You are on the stairs to the tower.\n",
-            "Exits: Down, Up\n",
-            "You are in the courtyard of ACTION CASTLE.\n",
-            "Exits: West, East, Up, Down\n",
-            "You see: \n",
-            "The unconscious guard is slumpped against the wall\n",
-            "You stand inside the Great Feasting Hall. There is a strange candle here.\n",
-            "Exits: West, East\n",
-            "This is the throne room of ACTION CASTLE. There is an ornate golden throne here.\n",
-            "Exits: West\n",
-            "You see: \n",
-            "a golden throne\n",
-            "\t sit on throne\n",
-            ">sit on throne\n",
-            "You sit on the ornate golden throne. The people cheer for the new ruler of... ACTION CASTLE!\n",
-            "THE GAME HAS ENDED.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
